Adding Android Library

--- a/jokeviewer/src/main/res/values/strings.xml
+++ b/jokeviewer/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">JokeViewer</string>
+    <string name="title_activity_viewer">Viewer</string>
 </resources>
